# qroma-hat

./: sitemap.xml
app/hat-control/: index.html
apps/file_to_hat_uploader/: pyproject.toml  settings.py  upload_to_hat.py
apps/py-qroma-hat/: parse_qroma_core_config.py  pyproject.toml  qroma-core-config.qroma
apps/py-qroma-hat/qroma_proto/: my_project_messages_pb2.py
assets/js/: 065b2e3e.374999c9.js  065b2e3e.6b19137b.js  065b2e3e.9826ea49.js  1b7bd04c.419b9eb8.js  1b7bd04c.5e543aac.js  22e62794.8324640b.js  22e62794.baa44734.js  22e62794.ee4ed7f0.js  3053e565.41db7827.js  33ab0031.be91d274.js  36448c4f.03232a29.js  36448c4f.597045f7.js  36448c4f.e4066ef6.js  38f61234.2cfaa623.js  38f61234.bbc9086a.js  3e8ae203.14fe8194.js  3e8ae203.49a30a13.js  3e8ae203.6b587014.js  4060.3fe53bc1.js  45ffadab.47973334.js  45ffadab.82afddfc.js  45ffadab.f464d689.js  471af7dd.4e5aa227.js  471af7dd.73196c5e.js  471af7dd.99c6171a.js  4815bad5.e2c785e5.js  5f3503d6.0e60c858.js  5f3503d6.10d309d9.js  7094.34e5df8d.js  7094.937b400d.js  863e898e.05d4c7fb.js  8a62b7b4.44becc96.js  8a62b7b4.69c2690e.js  8a62b7b4.f46e19b1.js  8d61146d.89e7a455.js  8d61146d.9aa2fda9.js  8d61146d.ddc87d30.js  97290bf9.425d1917.js  97290bf9.674a47c0.js  97290bf9.f64c540d.js  (+27 more)
firmware/esp32-qroma-hat/: platformio.ini
protobufs/protofiles-in/: my-project-messages.options  my-project-messages.proto
protobufs/protofiles-out/: compiled-by-qroma.txt
qroma-io/sendAppMessage/: index.html
sites/www-qroma-hat/: docusaurus.config.js  package-lock.json  package.json  sidebar-advanced.js  sidebar-app.js
(+79 files in other folders)
