[tool.poetry]
name = "file-to-hat-uploader"
version = "0.1.0"
description = ""
authors = ["Albert Boehmler <ajboehmler@gmail.com>"]
readme = "README.md"
packages = [{include = "file_to_hat_uploader"}]

[tool.poetry.dependencies]
python = "^3.11"
py-qroma = {path = "C:/Users/ajb/Projects/qromatech/qroma-libraries/py-qroma", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
